// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a secondary element LoginAnchor which renders correctly 1`] = `
<a
  className="sc-AxiKw dPZmIc"
>
  <svg
    className="sc-AxhCb icsYYY"
    fill="none"
    height="1em"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
    />
    <polyline
      points="10 17 15 12 10 7"
    />
    <line
      x1="15"
      x2="3"
      y1="12"
      y2="12"
    />
  </svg>
  Login
</a>
`;

exports[`renders correctly 1`] = `
<nav
  className="sc-AxjAm gZArjw"
>
  <img
    alt="logo"
    className="sc-AxirZ brTHAv"
    src="logo.png"
  />
  <a
    className="sc-AxiKw dPZmIc"
  >
    <svg
      className="sc-AxhCb icsYYY"
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
      />
      <polyline
        points="10 17 15 12 10 7"
      />
      <line
        x1="15"
        x2="3"
        y1="12"
        y2="12"
      />
    </svg>
    Login
  </a>
</nav>
`;
